Sigil-1.9.1
    Bug Fixes
     - Allow creation of a Windows 7 Legacy Installer to return Sigil to Windows 7 (for now)
     - Completely revamped Find and Replace (yet again) to return most of its
           earlier behaviour for finding next
     - Prevent Find and Replace Count from changing current location
     - Extend spellcheck suggestions to properly handle end of sentence vs abbreviations
     - Center Image Report File Sizes vertically within their row.
     - Go To Link Or Style will now properly skip leading comments on selectors in CSS stylesheets
     - ecmascript is considered a core media type for javascript files
     - make URLInterceptor robust when the Book pointer is NULL (has been cleared)


Sigil-1.9.0
    Bug Fixes
     - Update gumbo to follow WhatWG changes for closing br and p tags in foreign content
     - Fix Saved Search Controls code typo for Tabbed Html Files
     - Plug long existant memory leaks related to Saved Searches that stop after a match is found
     - More file position of 0 fixes and handle toInt() result failures from N/A in ValidationResults
     - Fix incorrect copied permissions with AddContentFileToFolder after QFile::copy
     - Fix broken page up / down by key sequence in Repo Log and Automate Log.
     - Fix broken PluginRunner error signal

    New Features
     - Make Validation Results sortable by clicking on column header
     - Add Export All to Validation Results for text or csv output
     - Completely redesign Find Replace and Saved Searches to not overload wrap when searching multiple targets
         and add "Restart Search" button to make skipping replacements in Saved Searches easier
     - Update to use the PCRE2 library for regular expression searching
     - Add a new Sigil Preferences settings to disable GPU acceleration for QtWebEngine/Preview
         to make it easier for Sigil to keep working even with older graphics drivers